--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
 	<title>躺平</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4798098153916731"
+     crossorigin="anonymous"></script>
 	<!--[if IE]><script type="text/javascript" src="https://cdn.staticfile.org/jquery/1.12.4/jquery.min.js"></script><![endif]-->
 	<!--[if !IE]>--><script type="text/javascript" src="https://cdn.staticfile.org/jquery/3.1.1/jquery.min.js"></script><!--<![endif]-->
 </head>
 <body>
 	<h2 style="text-align:center;font-size:100px;margin: 20px;">躺平</h2>
-	<h3 style="text-align:center;font-size:40px;"><a href="https://tang.pn">https://tang.pn</a></h3>
+	<p style="text-align:center;">压力太大？何不躺平！</p>
+	<h3 style="text-align:center;font-size:30px;"><a href="https://tang.pn">https://tang.pn</a></h3>
 	<p style="text-align:center;"><video src="tang.pn.mp4" muted autoplay="autoplay" loop="loop"></video></p>
 	<p style="text-align:center;">P.S. 欢迎访问我的个人网站<a href="https://www.zhouii.com/" target="_blank">https://www.zhouii.com/</a></p>
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4798098153916731"
-	crossorigin="anonymous"></script>
 	<ins class="adsbygoogle"
-	style="display:block"
+	style="display:block;text-align: center;"
 	data-ad-client="ca-pub-4798098153916731"
 	data-ad-slot="7472529860"
 	data-ad-format="auto"
